# pyrknn

./: .gitignore  .gitmodules  CMakeLists.txt  DevelopmentLog.txt  INSTALL.txt  Makefile  README  README.md  README_HASH.txt  SpGeMM_2D.py  SpGeMM_2D_new.py  SpGeMM_3D.cu  SpGeMM_3D.py  SpGeMM_3D_mod.py  build.sh  build_dist_forest.py  create_tree.py  cuSparse  cupy_test.py  form_hash.py  form_simhash.py  makefile  meta.yaml  pyproject.bak  pyproject.toml  ranks_2048_1B_512_CPU_lt_1.txt  ranks_512_1B_512_CPU_lt_1.txt  requirements.txt  run_dense.py  run_dense_strong.py  run_dense_strong_longhorn.py  run_dense_weak.py  run_dense_weak_longhorn.py  run_exact_url.py  run_kdd12.py  run_multinode_url.py  run_sift.py  run_sift_1b.py  run_single_url.py  run_sparse.py  (+24 more)
GeMM/: makefile
GeMM/cuSparse/: cuSparse.py
GeMM/include/: DFIKNN.h  FIKNN_dense.h  FIKNN_sparse.h  knn_seq_dense.h  rnd_gen.h
GeMM/libs/: env_source.sh
GeMM/old/: Makefile  SpGeMM  SpGeMM-analysis.nvprof  SpGeMM-analysis1.nvprof  SpGeMM_1D  SpGeMM_1D.cu  SpGeMM_1D_TriPart  SpGeMM_1D_TriPart_v2.cu  SpGeMM_3D  SpGeMM_3D.py  SpGeMM_Iter  SpGeMM_Iter.cu  SpGeMM_Iter2  SpGeMM_Iter_stripes  SpGeMM_Iter_stripes.cu  SpGeMM_Iter_stripes_v2  SpGeMM_Iter_stripes_v2.cu  SpGeMM_TriPart  SpGeMM_TriPart_v1  SpGeMM_TriPart_v1.cu  SpGeMM_TriPart_v2  SpGeMM_TriPart_v2.cu  SpGeMM_TriPart_v3  SpGeMM_TriPart_v3.cu  SpGeMM_TriPart_v3_report.nsight-cuprof-report  SpGeMM_report.nsight-cuprof-report  SpGeMM_run.py  SpGeMM_v15.cu  SpGeMM_v2.cu  makefile
GeMM/pysrc/: build.sh  dense.sh  dense_rnd.py  run_dense.py  run_sparse.py  setup.py  sparse.sh  sparse_rnd.py
GeMM/sort/: build.sh  setup_compare.py  test_sort.py
GeMM/src/: CMakeLists.txt  FIKNN_Interface_dense.cpp  FIKNN_sparse.cu  FIKNN_sparse_gpu.cpp
GeMM/test/: knn_seq_dense.cpp
GeMM/wrapper/: build.sh  gensparse.py  knn_seq.py  setup.py  setup_dense.py  test_dgemm.py  test_gemm.py
SpGeMM/: .SpGeMM_2D.py.swp  Iterative_knn.tex  SpGeMM.cu  SpGeMM_1D.cu  SpGeMM_1D_TriPart.cu  SpGeMM_2D.py  SpGeMM_2D_NoPerm.py  SpGeMM_2D_parleaf.py  SpGeMM_3D.cu  SpGeMM_Iter.cu  SpGeMM_Iter_stripes.cu  SpGeMM_TriPart_subleaves.cu  SpGeMM_TriPart_v1.cu  SpGeMM_TriPart_v2.cu  SpGeMM_TriPart_v3.cu  SpGeMM_subleaves.cu  SpGeMM_v15  SpGeMM_v2  SpGeMM_v2.cu  job_profiler.sh  makefile
SpGeMM/cuSparse/: cuSparse.cu
SpGeMM/include/: .knn_seq_dense.h.swp  FIKNN_dense.h  FIKNN_sparse.h  TSKNN_sparse.h  knn_seq_dense.h  knn_seq_sparse.h  rnd_gen.h
SpGeMM/old/: SpGeMM_1D_TriPart.cu  SpGeMM_1D_TriPart_report.nsight-cuprof-report  SpGeMM_1D_TriPart_v2  SpGeMM_2D.py  SpGeMM_Iter2.cu  SpGeMM_Iter_v2.cu  SpGeMM_TriPart_subleaves  SpGeMM_subleaves
SpGeMM/src/: FIKNN_Interface_dense.cpp  FIKNN_Interface_sparse.cpp  FIKNN_dense.cu  FIKNN_sparse.cu  TSKNN.cu  TSKNN_Interface.cpp  rnd_gen.cpp
SpGeMM/test/: knn_seq_dense.cpp  knn_seq_sparse.cpp
SpGeMM/tmp/: makefile  pcode.py  setup.py  test.cpp  test.hpp  test.pyx
SpGeMM/wrapper/: Makefile  build.sh  gensparse.py  setup.py  setup1.py  test.sh  test_script.py  testspgemm.py
ali/: build.sh  makefile  run_dense.py  run_sparse_syn.py  setup.py  url.sh
ali/tree/: rkdtgpu.py  utilsgpu.py
chao/: .gitignore  Makefile  kernel_bbf.cu  kernel_gpu.cu  kernel_gpu.hpp  kernel_knn.cu  kernel_opt.cu  kernel_single.cu  knn.cpp  knn.hpp  knn_gpu.hpp  run.sh
cpu/: combinatorics_cpu.hpp
datasets/: readsift.py
examples/: check_neighbors.py
knn/: error.py  util.py
pyrknn/kernels/cpu/: CMakeLists.txt  core.cpp  core.pyx  primitives.pxd
pyrknn/kernels/cpu/impl/: set_library.sh
pyrknn/kernels/cpu/impl/exact/: CMakeLists.txt  Makefile  driver  driver.cpp  exact.cpp
pyrknn/kernels/cpu/impl/sparse/: CMakeLists.txt  backend_mkl.cpp  driver.cpp
python/: comb.pyx  combinatorics.pxd  setup_test.py
sc21/: cpu_node.out  rtx_node.out
simple/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  exurl.py  gensparse.py  rkdt.py  rkdtgpu.py  testspgemm.py  utils.py  utilsgpu.py  vis.py
src/pyrknn/kernels/cpu/: .core.pyx.swo  :wq:wq  CMakeLists.txt  core.pxd  core.pyx  primitives.pxd
src/pyrknn/kernels/cpu/impl/: .swp  primitives_copy.hpp  primitives_shared.hpp  util.hpp
src/pyrknn/kernels/cpu/impl/exact/: CMakeLists.txt  Makefile
src/pyrknn/kernels/cpu/impl/sparse/: CMakeLists.txt  Makefile  NLA.hpp  backend_eigen.cpp  backend_mkl.cpp  cmake.output  driver.cpp  matrix.hpp  run.py  spknn.cpp  spknn.cpp,v  spknn.hpp  util.cpp  util.hpp  util_eigen.cpp
src/pyrknn/kernels/cpu/impl/sparse_bak/: CMakeLists.txt  Makefile  NLA.hpp  backend_eigen.bak  run.py  spknn.hpp  timer.hpp  util_eigen.hpp
src/pyrknn/kernels/cpu/impl/sparse_bak/sparse/: Makefile  NLA.hpp  backend_mkl.cpp  timer.hpp
src/pyrknn/kernels/gpu/: CMakeLists.txt  core.pyx  core_gpu.pyx  core_sparse.pyx  numba_primitives.py  primitives.pxd  primitives_sparse.pxd
src/pyrknn/kernels/gpu/impl/: clean.sh
src/pyrknn/kernels/gpu/impl/dense/: CMakeLists.txt  denknn.cu  denknn.hpp  dfiknn.cu  dfiknn.hpp  dfileafknn.cu  leaf_knn.cu
src/pyrknn/kernels/gpu/impl/gemm/: CMakeLists.txt  Makefile  driver.cpp  gemm.cu  gemm.old
src/pyrknn/kernels/gpu/impl/merge/: CMakeLists.txt  Makefile  merge.cu  merge.hpp
src/pyrknn/kernels/gpu/impl/orthogonal/: CMakeLists.txt  Makefile
src/pyrknn/kernels/gpu/impl/readSVM/: CMakeLists.txt  timer.cpp
src/pyrknn/kernels/gpu/impl/reorder/: CMakeLists.txt  Makefile  reorder.cu  reorder.hpp
src/pyrknn/kernels/gpu/impl/sfiknn/: .sfiknn.hpp.swp  CMakeLists.txt  Makefile  sfiknn.cu  sfiknn.hpp  sparse.pyx
src/pyrknn/kernels/gpu/impl/singleton/: singleton.cpp
src/pyrknn/kernels/gpu/impl/sort/: CMakeLists.txt  sort.hpp
src/pyrknn/kernels/gpu/impl/sparse/: CMakeLists.txt  Makefile  driver.cpp  leaf_knn.cu  matrix.hpp  spknn.cu  spknn.hpp
src/pyrknn/kernels/gpu/impl/transpose/: CMakeLists.txt  Makefile
src/pyrknn/kernels/gpu/impl/util/: CMakeLists.txt  Makefile  knn_handle.hpp  mgpu_handle.hpp  op_gpu.hpp  rand.cu  singleton.hpp  util_gpu.hpp
test/: cupy_test.py  median_test.py  myjob.e572493  myjob.e572494  myjob.o572493  myjob.o572494  submit.sh  test_knn_debug.py
(+529 files in other folders)
